# fraude

./: .gitignore  CLAW.md  FRAUDE.md  MIGRATION.md  PARITY.md  README.md
rust/: .gitignore  CONTRIBUTING.md  Cargo.toml  FRAUDE.md  README.md  justfile
rust/.cargo/: config.toml
rust/.config/: nextest.toml
rust/.github/workflows/: ci.yml
rust/crates/api/: ARCHITECTURE.md  CONFORMANCE.md  Cargo.toml  README.md  TODO.md
rust/crates/api/src/: client.rs  lib.rs  sse.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
rust/crates/commands/: ARCHITECTURE.md  CONFORMANCE.md  Cargo.toml  README.md  TODO.md
rust/crates/commands/src/: lib.rs
rust/crates/compat-harness/: ARCHITECTURE.md  CONFORMANCE.md  README.md  TODO.md
rust/crates/compat-harness/src/: lib.rs
rust/crates/fraude-cli/: ARCHITECTURE.md  CONFORMANCE.md  Cargo.toml  README.md  TODO.md
rust/crates/lsp/: ARCHITECTURE.md  CONFORMANCE.md  Cargo.toml  README.md  TODO.md
rust/crates/macros/: ARCHITECTURE.md  CONFORMANCE.md  Cargo.toml  README.md  TODO.md
rust/crates/plugins/: ARCHITECTURE.md  CONFORMANCE.md  README.md  TODO.md
rust/crates/runtime/: ARCHITECTURE.md  CONFORMANCE.md  Cargo.toml  README.md  TODO.md
rust/crates/server/: ARCHITECTURE.md  CONFORMANCE.md  README.md  TODO.md
rust/crates/tools/: ARCHITECTURE.md  CONFORMANCE.md  Cargo.toml  README.md  TODO.md
rust/docs/: ARCHITECTURE.md  CONTRIBUTING.md
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: fuzz_lsp_read_message.rs  fuzz_openai_compat_stream.rs  fuzz_percent_decode.rs  fuzz_sse_push.rs
(+65 files in other folders)
